--- a/app/views/flats/_form.html.erb
+++ b/app/views/flats/_form.html.erb
@@ -1,9 +1,12 @@
-<%= simple_form_for @flat, html: { class: "mt-4" } do |f| %>
-  <%= f.input :name, label: "Name", class: "form-control" %>
-  <%= f.input :address, label: "Address", class: "form-control" %>
-  <%= f.input :description, label: "Description", class: "form-control" %>
-  <%= f.input :price_per_night, label: "Price per Night", class: "form-control" %>
-  <%= f.input :number_of_guests, label: "Number of Guests", class: "form-control" %>
-
-  <%= f.submit "Save Changes", class: "btn btn-primary mt-3" %>
+<%= simple_form_for @flat, html: { class: 'form' } do |f| %>
+  <h2 class="mb-3"><%= f.object.new_record? ? 'Create a New Apartment' : 'Edit Apartment' %></h2>
+  <%= f.input :name, label: 'Apartment Name' %>
+  <%= f.input :address %>
+  <%= f.input :description, as: :text %>
+  <%= f.input :price_per_night, label: 'Price per Night (USD)' %>
+  <%= f.input :number_of_guests, label: 'Number of Guests' %>
+  <%= f.input :picture_url, label: 'Picture URL' %>
+  <%= f.button :submit, class: 'btn btn-primary' %>
 <% end %>
+
+<%= link_to 'Back to Apartments', flats_path, class: 'btn btn-secondary mt-3' %>
