--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,11 +1,18 @@
-<div class="container mt-5">
-  <h1 class="text-center">List of Flats</h1>
-
-  <ul class="list-group">
+<div class="container">
+  <div class="row">
     <% @flats.each do |flat| %>
-      <li class="list-group-item">
-        <%= link_to "#{flat.name} - #{flat.address}", flat_path(flat), class: "text-decoration-none" %>
-      </li>
+      <div class="col">
+        <div class="card mb-3">
+          <img src="<%= flat.picture_url %>" alt="<%= flat.name %>" class="card-img-top">
+          <div class="card-body">
+            <h5 class="card-title"><%= flat.name %></h5>
+            <p class="card-text"><%= flat.description %></p>
+            <p class="card-text">Price per night: $<%= flat.price_per_night %></p>
+            <p class="card-text">Number of guests: <%= flat.number_of_guests %></p>
+            <%= link_to "View details", flat_path(flat), class: "btn btn-primary" %>
+          </div>
+        </div>
+      </div>
     <% end %>
-  </ul>
+  </div>
 </div>
